// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SponsorBadge/> renders the component <SponsorBadge /> 1`] = `
<styles__Badge
  href="https://sponsor1.com"
  level="Headline"
  preventLevelSize={false}
  rel="noopener noreferrer"
  target="_blank"
>
  <styles__BadgeImage
    alt="Sponsor One"
    level="Headline"
    preventLevelSize={false}
    src="/logo1"
  />
</styles__Badge>
`;

exports[`<SponsorBadge/> renders the component <SponsorBadge /> and prevent level size 1`] = `
<styles__Badge
  href="https://sponsor1.com"
  level="Headline"
  preventLevelSize={true}
  rel="noopener noreferrer"
  target="_blank"
>
  <styles__BadgeImage
    alt="Sponsor One"
    level="Headline"
    preventLevelSize={true}
    src="/logo1"
  />
</styles__Badge>
`;

exports[`<SponsorBadge/> renders the component <SponsorBadge /> with big size sponsor 1`] = `
<SponsorBadge
  level="Headline"
  logo="/logo1"
  name="Sponsor One"
  preventLevelSize={false}
  url="https://sponsor1.com"
>
  <styles__Badge
    href="https://sponsor1.com"
    level="Headline"
    preventLevelSize={false}
    rel="noopener noreferrer"
    target="_blank"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "styles__Badge-uzqcz1-0",
            "isStatic": false,
            "lastClassName": "czTwOV",
            "rules": Array [
              "border:none;display:inline-flex;align-items:center;justify-content:center;background-color:#f9f9f9;margin:0 10px 10px 0;padding:10px;",
              "@media (min-width:",
              "768",
              "px){",
              "
    margin: 0 30px 30px 0;
  ",
              ";}",
              ";",
              [Function],
              ";",
            ],
          },
          "displayName": "styles__Badge",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "styles__Badge-uzqcz1-0",
          "target": "a",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href="https://sponsor1.com"
      level="Headline"
      preventLevelSize={false}
      rel="noopener noreferrer"
      target="_blank"
    >
      <a
        className="styles__Badge-uzqcz1-0 czTwOV"
        href="https://sponsor1.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <styles__BadgeImage
          alt="Sponsor One"
          level="Headline"
          preventLevelSize={false}
          src="/logo1"
        >
          <StyledComponent
            alt="Sponsor One"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "styles__BadgeImage-uzqcz1-1",
                  "isStatic": false,
                  "lastClassName": "crqdQM",
                  "rules": Array [
                    [Function],
                    ";",
                  ],
                },
                "displayName": "styles__BadgeImage",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "styles__BadgeImage-uzqcz1-1",
                "target": "img",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            level="Headline"
            preventLevelSize={false}
            src="/logo1"
          >
            <img
              alt="Sponsor One"
              className="styles__BadgeImage-uzqcz1-1 crqdQM"
              src="/logo1"
            />
          </StyledComponent>
        </styles__BadgeImage>
      </a>
    </StyledComponent>
  </styles__Badge>
</SponsorBadge>
`;

exports[`<SponsorBadge/> renders the component <SponsorBadge /> with small size sponsor 1`] = `
<SponsorBadge
  level="Silver"
  logo="/logo2"
  name="Sponsor Two"
  preventLevelSize={false}
  url="https://sponsor2.com"
>
  <styles__Badge
    href="https://sponsor2.com"
    level="Silver"
    preventLevelSize={false}
    rel="noopener noreferrer"
    target="_blank"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "styles__Badge-uzqcz1-0",
            "isStatic": false,
            "lastClassName": "cZhemG",
            "rules": Array [
              "border:none;display:inline-flex;align-items:center;justify-content:center;background-color:#f9f9f9;margin:0 10px 10px 0;padding:10px;",
              "@media (min-width:",
              "768",
              "px){",
              "
    margin: 0 30px 30px 0;
  ",
              ";}",
              ";",
              [Function],
              ";",
            ],
          },
          "displayName": "styles__Badge",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "styles__Badge-uzqcz1-0",
          "target": "a",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href="https://sponsor2.com"
      level="Silver"
      preventLevelSize={false}
      rel="noopener noreferrer"
      target="_blank"
    >
      <a
        className="styles__Badge-uzqcz1-0 cZhemG"
        href="https://sponsor2.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <styles__BadgeImage
          alt="Sponsor Two"
          level="Silver"
          preventLevelSize={false}
          src="/logo2"
        >
          <StyledComponent
            alt="Sponsor Two"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "styles__BadgeImage-uzqcz1-1",
                  "isStatic": false,
                  "lastClassName": "gsbKBa",
                  "rules": Array [
                    [Function],
                    ";",
                  ],
                },
                "displayName": "styles__BadgeImage",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "styles__BadgeImage-uzqcz1-1",
                "target": "img",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            level="Silver"
            preventLevelSize={false}
            src="/logo2"
          >
            <img
              alt="Sponsor Two"
              className="styles__BadgeImage-uzqcz1-1 gsbKBa"
              src="/logo2"
            />
          </StyledComponent>
        </styles__BadgeImage>
      </a>
    </StyledComponent>
  </styles__Badge>
</SponsorBadge>
`;

exports[`<SponsorBadge/> renders the component <SponsorBadge /> without logo 1`] = `
<SponsorBadge
  level="Silver"
  logo=""
  name="Sponsor Three"
  preventLevelSize={false}
  url="https://sponsor3.com"
>
  <styles__Badge
    href="https://sponsor3.com"
    level="Silver"
    preventLevelSize={false}
    rel="noopener noreferrer"
    target="_blank"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "styles__Badge-uzqcz1-0",
            "isStatic": false,
            "lastClassName": "cZhemG",
            "rules": Array [
              "border:none;display:inline-flex;align-items:center;justify-content:center;background-color:#f9f9f9;margin:0 10px 10px 0;padding:10px;",
              "@media (min-width:",
              "768",
              "px){",
              "
    margin: 0 30px 30px 0;
  ",
              ";}",
              ";",
              [Function],
              ";",
            ],
          },
          "displayName": "styles__Badge",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "styles__Badge-uzqcz1-0",
          "target": "a",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href="https://sponsor3.com"
      level="Silver"
      preventLevelSize={false}
      rel="noopener noreferrer"
      target="_blank"
    >
      <a
        className="styles__Badge-uzqcz1-0 cZhemG"
        href="https://sponsor3.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <styles__NamePlaceholder>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "styles__NamePlaceholder-uzqcz1-2",
                  "isStatic": true,
                  "lastClassName": "kxElvH",
                  "rules": Array [
                    "color:#9b9b9b;display:inline-block;margin:0;padding:15px;text-align:center;",
                  ],
                },
                "displayName": "styles__NamePlaceholder",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "styles__NamePlaceholder-uzqcz1-2",
                "target": "h3",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <h3
              className="styles__NamePlaceholder-uzqcz1-2 kxElvH"
            >
              Sponsor Three
            </h3>
          </StyledComponent>
        </styles__NamePlaceholder>
      </a>
    </StyledComponent>
  </styles__Badge>
</SponsorBadge>
`;
